<resources>
    <string name="app_name">Notekeeper(Kotlin)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteKeeper(Kotlin)</string>
    <string name="edit_note">Edit Note</string>
    <string name="menu_title_next">Next</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="open_navigation">Open navigation</string>
    <string name="action_notes">Notes</string>
    <string name="action_courses">Courses</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="nav_share_message">Don\'t you think you have shared enough</string>
    <string name="nav_send">Send</string>
    <string name="how_many">How many</string>
    <string name="nav_how_many_message_format">Notes: %1$d | Courses: %2$d</string>
    <string name="note_text">Note text</string>
    <string name="note_title">Note title</string>
    <string name="recently_viewed_notes">Recently viewed Notes</string>
    <string name="communication">Communication</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="reminder_body">Review %1$s</string>
    <string name="appwidget_text">NOTES</string>
    <string name="add_widget">Add widget</string>

    <string-array name="note_color_array">
        <item>#E57373</item>
        <item>#bA6BC8</item>
        <item>#64B5F6</item>
        <item>#81C784</item>
        <item>#FFF176</item>
        <item>#FFB74D</item>
        <item>#90A4AE</item>
    </string-array>
</resources>