<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeperkotlin.NoteActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:title="@string/menu_title_next"
        android:icon="@drawable/ic_forward_white"
        android:orderInCategory="20"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_get_together"
        android:title="Discuss"
        android:icon="@drawable/ic_people_white"
        android:orderInCategory="10"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_reminder"
        android:title="@string/action_reminder"
        android:orderInCategory="30"
        app:showAsAction="ifRoom|withText"/>

</menu>